Fixed issue #864.